fixed the alignment problem on firefox

--- a/views/themed/weatherph/webroot/css/theme.css
+++ b/views/themed/weatherph/webroot/css/theme.css
@@ -902,7 +902,7 @@ span.temperature {
 .dropdown li {
     position:relative;
     display: inline;
-    padding: 0 1.25em;
+    padding: 0 1em;
 }
 
 .dropdown form {
